--- a/book-flow-tauri/package.json
+++ b/book-flow-tauri/package.json
@@ -8,9 +8,11 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri dev",
-    "lint": "npx eslint ./src --fix"
+    "lint": "npx eslint ./src --fix",
+    "migrate": "prisma migrate dev"
   },
   "dependencies": {
+    "@prisma/client": "^5.19.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@tauri-apps/api": "^1",
     "class-variance-authority": "^0.7.0",
@@ -33,6 +35,7 @@
     "eslint-plugin-react": "^7.35.0",
     "globals": "^15.9.0",
     "postcss": "^8.4.41",
+    "prisma": "^5.19.0",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.2.2",
     "typescript-eslint": "^8.3.0",
