--- a/book-flow-tauri/src-tauri/Cargo.toml
+++ b/book-flow-tauri/src-tauri/Cargo.toml
@@ -2,7 +2,7 @@
 name = "book-flow-tauri"
 version = "0.1.0"
 description = "A Tauri App"
-authors = ["you"]
+authors = ["Thiago Elias"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -14,6 +14,9 @@ tauri-build = { version = "1", features = [] }
 tauri = { version = "1", features = ["shell-open"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
+dotenvy = "0.15"
+libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
