--- a/book-flow-tauri/src-tauri/Cargo.toml
+++ b/book-flow-tauri/src-tauri/Cargo.toml
@@ -15,6 +15,8 @@ tauri = { version = "1", features = ["shell-open"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
+diesel_migrations = "2.2.0"
+async-trait = "0.1.81"
 dotenvy = "0.15"
 libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
 
